--- a/kasa/src/styles/logement.scss
+++ b/kasa/src/styles/logement.scss
@@ -47,6 +47,20 @@
     font-size: 14px;
   }
 
+  &__host-rating {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 15px;
+
+    @media (max-width: 768px) {
+      flex-direction: row-reverse;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+    }
+  }
+
   &__host {
     display: flex;
     align-items: center;
@@ -71,7 +85,6 @@
   &__rating {
     display: flex;
     gap: 5px;
-    margin-bottom: 20px;
   }
 
   &__star {
@@ -85,9 +98,25 @@
     gap: 30px;
     margin-bottom: 40px;
 
+    // Force les deux collapses à la même taille
+    .collapse {
+      flex: 1;
+    }
+
     @media (max-width: 768px) {
       flex-direction: column;
       gap: 20px;
+    }
+  }
+
+  &__equipments {
+    list-style: none; // supprime les puces
+    padding: 0;
+    margin: 0;
+
+    li {
+      padding: 4px 0;
+      color: #333;
     }
   }
 }
